<resources>

    <string name="test">testing git hub commit/push - JD</string>
    <string name="app_name">Tic-Tac Variants</string>
    <string name="play_btn">Play Wild Tic-Tac-Toe</string>
    <string name="play_btn2">Play Notakto Tic-Tac-Toe</string>
    <string name="about_btn">About the app</string>
    <string name="more_btn">More about the Variants</string>
    <string name="welcome_txt">Welcome to Tic-Tac Variants!</string>
    <string name="wild_Choosetxt">Choose to play X or O:</string>
    <string name="Player1">Player One"'"s Turn</string>
    <string name="Player2">Player Two"'"s Turn</string>
</resources>
